starting to integrate Erin's work, but I didn't get very far

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 .RData
 .Ruserdata
 tlycs_portland_trial_2021/tlycs_dec_2021_vs_2020_by_city_n_america.xlsx
+gwwc/GWWC feb 22 test with age and gender.csv
+gwwc/GWWC feb 22 test without age gender.csv
