incorporating giving guide experiment work/results

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ gwwc/GWWC feb 22 test without age gender.csv
 gwwc/raw_data/*
 *.rds
 /.quarto/
+gwwc/gg_raw_data_shareable/textdata_dv_linkclicks.csv
+gwwc/gg_raw_data_shareable/textdata_dv_results.csv
+gwwc/gg_raw_data_shareable/videodata_dv_linkclicks.csv
+gwwc/gg_raw_data_shareable/videodata_dv_results.csv
