formatting, cleaning, build

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ gwwc/gg_raw_data_shareable/textdata_dv_linkclicks.csv
 gwwc/gg_raw_data_shareable/textdata_dv_results.csv
 gwwc/gg_raw_data_shareable/videodata_dv_linkclicks.csv
 gwwc/gg_raw_data_shareable/videodata_dv_results.csv
+80k_do_not_share/*
