--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,7 @@ bibliography: references.bib
 format:
   html:
     code-fold: true
+    code-overflow: wrap
     code-link: true #note: this isn't working for me
     code-tools: true
     theme: cosmo
