--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,7 @@ book:
     - chapters/gwwc_pledge_wip.qmd
     - chapters/oftw_upsell_input_first_analysis.qmd
     - chapters/tlycs_input_simple_analysis.qmd
+    - chapters/present_summit/eamt_path_presentation.qmd
     - references.qmd
   reader-mode: true
 
